# MDViewer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  coverage-all.lcov  coverage-core.lcov  coverage-desktop.lcov  coverage-mdcd.lcov  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.claude/agent-memory/tcoder-plan-reviewer/: MEMORY.md
.claude/tcoder/2026-04-28-mdviewer/: design-mdviewer.md  (+3 more)
.github/: dependabot.yml
.github/workflows/: android-distribution.yml  android.yml  ci.yml  coverage.yml  release.yml  visual.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/core/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
android/keystore/: README.md  debug.keystore
crates/mdviewer-core/: Cargo.toml  README.md  build.rs  uniffi.toml
crates/mdviewer-core/assets/: document.css
crates/mdviewer-core/src/: anchor.rs  auto_merge.rs  comments.rs  document.rs  lib.rs  mdviewer_core.udl  sidecar.rs  sidecar_path.rs  ssh_url.rs  uniffi_bindgen_main.rs  uniffi_bindings.rs
crates/mdviewer-core/tests/: anchor_smoke.rs  comments_smoke.rs  render_cli_smoke.rs  render_pin.rs  sidecar_bytes_round_trip.rs  sidecar_path_table.rs
crates/mdviewer-core/tests/fixtures/: render_pin_expected.html  render_pin_input.md
crates/mdviewer-jni/: Cargo.toml  build.rs
crates/mdviewer-jni/src/: lib.rs
crates/mdviewer-jni/tests/: threads_uniffi.rs  uniffi_smoke.rs
docs/: verify-print-crossplatform.md
docs/regression-audits/: v0.4.0-baseline.md
docs/wireframes/: 01-startup.html  03-document-view.html  07-edit-mode.html  08-conflict-diff.html  10-share-dialog.html  11-settings.html  13-dark-options.html  icon-options.html
e2e/: 00-startpage-open-flow.spec.ts  01-open-render.spec.ts  02-profile-setup.spec.ts  03-add-comment.spec.ts  04-reply-resolve.spec.ts  05-edit-reattach.spec.ts  06-auto-merge.spec.ts  07-conflict-diff.spec.ts  08-share-export.spec.ts  09-settings-take-effect.spec.ts  10-theme-switch.spec.ts  11-dark-mode-visibility.spec.ts  12-tabbar-new-tab.spec.ts  13-tabbar-label-and-close.spec.ts  14-app-menu.spec.ts  15-font-size.spec.ts  16-tab-switch.spec.ts  17-startup-restore.spec.ts  18-sidebar-toggle.spec.ts  19-drive-comments.spec.ts  20-render-gallery.spec.ts  21-ssh-open-from-cli.spec.ts  22-ssh-open-from-dialog.spec.ts  23-ssh-save-back.spec.ts  24-ssh-conflict.spec.ts  b2.spec.ts  b3.spec.ts  c1.spec.ts  c2.spec.ts  d1.spec.ts  d2.spec.ts  d3.spec.ts  e1.spec.ts  e2.spec.ts  export-pdf-smoke.mjs  f1.spec.ts  g1.spec.ts
e2e-visual/: gallery.spec.ts  oracle.globalSetup.ts  oracle.spec.ts  playwright.config.ts  sigil-leak-regression.spec.ts
e2e-visual/gallery-page/: defaultSettings.ts  index.html  main.ts  mermaid-stub.ts  vite.config.ts
e2e/fixtures/: print-sample.md  recompute-offsets.mjs  render-bug-repro.md  render-gallery.md  render-gallery.md.comments.json  sample.md  sample.md.comments.json
e2e/helpers/: app.ts  drive-mock.ts  independentSshRead.ts  independentSshWrite.ts  sshd-fixture.ts
e2e/printing/: a1.spec.ts  b1.spec.ts  c1.spec.ts  d1.spec.ts  e1.spec.ts
scripts/: audit-v040.mjs  build.sh  check-coverage.sh
src/: index.html  ipc.ts  keymap.ts  main.ts  menuBridge.ts  types-generated.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: anchor_bench.rs
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anchor.rs  cli.rs  cli_install.rs  comments.rs  conflict.rs  doc_prefs.rs  document.rs  lib.rs  main.rs  menu.rs  pdf.rs  recents.rs  session.rs  settings.rs  sidecar.rs  watcher.rs  workspace.rs
src-tauri/src/drive/: api.rs  auth.rs  cache.rs  comments.rs  detect.rs  file_id.rs  files.rs  keyring.rs  mod.rs  queue.rs  tokens.rs
src-tauri/src/ssh/: askpass.rs  auth.rs  mod.rs  operations.rs  transport.rs  transport_unix.rs  transport_windows.rs
src-tauri/tests/: anchor.rs  askpass_helper_bin.rs  auto_merge_reexport_pin.rs  comments.rs  conflict.rs  doc_prefs.rs  document.rs  drive_api.rs  drive_auth.rs  drive_backend_lifecycle.rs  drive_collaborators_resolve.rs  drive_comments_queue.rs  drive_connect_flow.rs  drive_detect.rs  drive_detect_dismissal.rs  drive_feature_flag.rs  drive_files.rs  drive_keyring.rs  drive_open_url.rs  drive_poll_one.rs  drive_queue_replay.rs  drive_save_conflict.rs  drive_settings.rs  drive_tokens.rs  export_types_bin.rs  ipc_registration.rs  recents.rs  scaffold.rs  settings.rs  settings_migration.rs  sidecar.rs  sidecar_path_wrapper.rs  ssh_integration_phase1.rs  watcher.rs  workspace.rs
src-tauri/tests/common/: mod.rs  russh_test_server.rs  ssh_fixture.rs
src-tauri/tests/fixtures/ssh/: README.md  id_test  id_test.pub  sshd_config.template  test_host_key  test_host_key.pub
src/styles/: app.css  theme.css
src/views/: AskpassModal.ts  CollabChip.ts  CommentsSidebar.ts  Conflict.ts  Document.ts  DriveDetectToast.ts  DriveSettings.ts  DriveStatus.ts  Edit.ts  LiveEditor.ts  OpenFromDrive.ts  OpenRemoteDialog.ts  OrphanComments.ts  ProfileSetup.ts  SelectionPopover.ts  Settings.ts  ShareDialog.ts  StartPage.ts  TabBar.ts  ThreadDetail.ts  Toast.ts  Workspace.ts  collabInitials.ts
tests/: codegen.test.ts  gallery-page.test.ts  ipc.test.ts  keymap.test.ts  main.test.ts  menuBridge.test.ts
tests/e2e-helpers/: sshd-fixture.test.ts
tests/render/: oracle.globalSetup.ts  oracle.test.ts
tests/scripts/: check_coverage_test.sh
tests/views/: AskpassModal.test.ts  CollabChip.test.ts  CommentsSidebar.test.ts  Conflict.test.ts  Document.test.ts  DriveDetectToast.test.ts  DriveStatus.test.ts  Edit.test.ts  LiveEditor.test.ts  OpenFromDrive.test.ts  OpenRemoteDialog.test.ts  OrphanComments.test.ts  ProfileSetup.test.ts  SelectionPopover.test.ts  Settings.test.ts  ShareDialog.test.ts  StartPage.fidelity.test.ts  StartPage.test.ts  TabBar.test.ts  ThreadDetail.fidelity.test.ts  ThreadDetail.test.ts  Toast.test.ts  Workspace.fidelity.test.ts  Workspace.test.ts  collabInitials.test.ts
(+206 files in other folders)
