[package]
name = "mdviewer"
version = "0.1.0"
edition = "2021"
description = "Cross-platform markdown viewer with collaborative comments"
authors = ["MDViewer team"]
license = "GPL-3.0-or-later"
repository = ""
default-run = "mdviewer"

[lib]
name = "mdviewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "mdviewer"
path = "src/main.rs"

[[bin]]
name = "export_types"
path = "src/bin/export_types.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# Persists window position + size on close and restores on next start.
# Cross-platform — Tauri-official plugin, writes to the app config dir
# (which our `MDVIEWER_DATA_DIR` override already redirects for tests).
tauri-plugin-window-state = "2"
# Funnels every secondary `mdviewer …` invocation into the running
# instance instead of spawning a duplicate window. The callback receives
# the second invocation's argv + cwd; we route them through the same
# CLI parser used at boot so all three entry points (cold start, macOS
# Launch Services re-launch, second `mdviewer foo.md`) converge on
# `Workspace::open_document`.
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.11"
syntect = "5"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = "8"
toml = "0.8"
diff-match-patch-rs = "0.4"
notify = "6"
automerge = "0.5"
base64 = "0.22"
similar = "2.5"
walkdir = "2"

# Google Drive integration (added in A1). HTTP client uses rustls (no
# OpenSSL system dep). `oauth2` drives the PKCE loopback flow. `tiny_http`
# hosts the localhost redirect listener during the auth round-trip.
# `urlencoding` builds query strings without pulling a heavy URL crate.
# `keyring` stores the refresh token in the OS-native secret store with
# default features off so we avoid async runtimes we don't want; we opt
# in only to the per-OS native backends we actually use.
# `tauri-plugin-stronghold` provides an encrypted at-rest fallback for
# secrets the keyring can't hold.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
oauth2 = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
tauri-plugin-stronghold = "2"
tiny_http = "0.12"
urlencoding = "2"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }

# E2E testing on macOS. Optional dep gated behind the `e2e` feature so
# release bundles built without the feature never expose a WebDriver port.
# The debug-build e2e workflow is `cargo build --features e2e`.
tauri-plugin-webdriver-automation = { version = "0.1", optional = true }

[features]
default = []
e2e = ["dep:tauri-plugin-webdriver-automation"]

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
criterion = "0.5"

[[bench]]
name = "anchor_bench"
harness = false
