[package]
name = "mdviewer"
version = "0.6.4"
edition = "2021"
description = "Cross-platform markdown viewer with collaborative comments"
authors = ["MDViewer team"]
license = "GPL-3.0-or-later"
repository = ""
default-run = "mdviewer"

[lib]
name = "mdviewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "mdviewer"
path = "src/main.rs"

[[bin]]
name = "export_types"
path = "src/bin/export_types.rs"

# A6: standalone helper invoked by `ssh` via SSH_ASKPASS on Unix. Builds
# on Windows too but compiles to a stub `main` that exits non-zero so
# packaging never accidentally ships a Linux artifact on Windows
# (Windows uses the russh in-process auth callback instead).
[[bin]]
name = "mdviewer-askpass"
path = "src/bin/mdviewer-askpass.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# A2: workspace-local crate that will absorb anchor/comments/sidecar/render
# code in A3-A6. Currently an empty stub — adding the path dep here so later
# tasks can `use mdviewer_core::*` without re-touching this manifest.
mdviewer-core = { path = "../crates/mdviewer-core" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# B3: dropped `tauri-plugin-window-state`. Multi-window geometry is now owned
# directly by `session.rs` (B1) + the `on_window_event` handler (B2), which
# persist one entry per window in `session.json` — the plugin only modelled a
# single window and wrote a separate `window-state.json` we no longer read.
# Funnels every secondary `mdviewer …` invocation into the running
# instance instead of spawning a duplicate window. The callback receives
# the second invocation's argv + cwd; we route them through the same
# CLI parser used at boot so all three entry points (cold start, macOS
# Launch Services re-launch, second `mdviewer foo.md`) converge on
# `Workspace::open_document`.
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# pulldown-cmark, syntect, diff-match-patch-rs, automerge moved into
# mdviewer-core during Phase A (A3, A5, A6). src-tauri reaches them
# transitively via the workspace dep below — no direct dependency
# needed here, and listing them would let versions drift between the
# two crates.
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = "12"
toml = "1.1"
notify = "8"
# base64 + similar are still used directly by drive/keyring.rs and
# conflict.rs respectively, so they stay listed here.
base64 = "0.22"
similar = "3.1"
walkdir = "2"
# A7: the polling loop spawns Tokio tasks via `tauri::async_runtime::spawn`,
# uses `tokio::sync::Semaphore` to bound concurrent in-flight Drive requests
# at 8, and sleeps between iterations with `tokio::time::sleep`. Tauri 2
# already pulls Tokio in as a transitive dep; we surface it as a direct
# dependency here so the explicit `use tokio::*` imports compile.
# `process` + `io-util` were added in A3 for the Unix SSH transport: it
# spawns `ssh` via `tokio::process::Command` and writes upload bytes to
# the child's stdin via `AsyncWriteExt`. The features are additive and
# don't affect non-A3 callers.
tokio = { version = "1", features = ["sync", "time", "rt", "macros", "process", "io-util", "net"] }
# A6: askpass listener uses `tempfile::tempdir()` to mint a per-process
# socket directory (chmod 700 by tempfile default) so a second mdviewer
# instance can't connect and harvest prompts. The helper bin doesn't
# need it — only the lib side does — but tempfile is small and already
# in dev-dependencies, so promoting it costs almost nothing.
tempfile = "3"

# Google Drive integration (added in A1). HTTP client uses rustls (no
# OpenSSL system dep). `oauth2` drives the PKCE loopback flow. `tiny_http`
# hosts the localhost redirect listener during the auth round-trip.
# `urlencoding` builds query strings without pulling a heavy URL crate.
# `url` is needed directly by `drive::auth` to assemble the authorization
# URL and parse the loopback redirect; it's already pulled in transitively
# by reqwest so the binary footprint cost is zero.
# `keyring` stores the refresh token in the OS-native secret store with
# default features off so we avoid async runtimes we don't want; we opt
# in only to the per-OS native backends we actually use.
# `tauri-plugin-stronghold` provides an encrypted at-rest fallback for
# secrets the keyring can't hold.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart", "blocking"] }
oauth2 = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
tauri-plugin-stronghold = "2"
tiny_http = "0.12"
urlencoding = "2"
url = "2"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
# `sha2` + `getrandom` back the vault-key derivation in `drive::keyring`:
# a per-machine random salt (getrandom) is hashed (sha2) to produce the
# 32-byte key Stronghold uses to encrypt the OAuth refresh token at rest.
sha2 = "0.10"
getrandom = "0.2"

# A3: SshTransport trait is async (fetch/push/list/stat are I/O-bound), so the
# trait uses `async-trait` to allow dispatching through `dyn SshTransport`.
# Later transport impls (Unix process, Windows russh) implement the trait
# behind the same dyn-safe surface.
async-trait = "0.1"

# E2E testing on macOS. Optional dep gated behind the `e2e` feature so
# release bundles built without the feature never expose a WebDriver port.
# The debug-build e2e workflow is `cargo build --features e2e`.
tauri-plugin-webdriver-automation = { version = "0.1", optional = true }

# A4: Windows russh transport. Pinned to russh 0.45 / russh-keys 0.45 /
# russh-sftp 2.0 because newer russh majors (0.50+) churned the
# `Handler` trait shape and the design's host-key verification flow
# depends on the 0.45 shape. The final wiring (also covered by A9)
# leaves these here under the cfg(windows) target stanza.
[target.'cfg(windows)'.dependencies]
russh = "0.45"
russh-sftp = "2.0"
russh-keys = "0.45"

[features]
default = []
e2e = ["dep:tauri-plugin-webdriver-automation"]

[dev-dependencies]
# tempfile is a regular dep now (A6 needs it at runtime for the askpass
# socket dir); listing it again here would be a duplicate.
pretty_assertions = "1"
criterion = "0.5"
# A3: ssh::transport trait test asserts the client-side sha256 hash hex.
hex = "0.4"
# Drive integration tests mutate the process-global `MDVIEWER_DRIVE_API_BASE`
# env var to point at a stub HTTP server. Cargo runs tests in parallel by
# default, so each such test is tagged `#[serial_test::serial]` to force
# serial execution within a test crate.
serial_test = "3"

[[bench]]
name = "anchor_bench"
harness = false
