[package]
name = "mdviewer-core"
version = "0.1.0"
edition = "2021"
description = "Shared MDViewer core: anchor + comments + sidecar + render."
license = "GPL-3.0-or-later"

[lib]
name = "mdviewer_core"
path = "src/lib.rs"

[dependencies]
# A3 + A4 + A6 deps merged.
# - Render half (A6): pulldown-cmark for the GFM event walk, syntect for
#   syntax highlighting. RenderOptions / RenderResult cross the desktop
#   IPC boundary, so ts-rs stays here too.
# - Anchor + comments graph (A3): diff-match-patch-rs (Bitap fuzzy match),
#   automerge (CRDT bridge), anyhow / thiserror (error context), base64,
#   similar — all previously in src-tauri/Cargo.toml.
# - AutoMergeMode + sidecar_filename (A4): serde-only — the wrapper
#   `AutoMergeModeTs` in src-tauri's settings.rs is what carries ts-rs
#   so the core enum stays platform-agnostic.
pulldown-cmark = "0.11"
syntect = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
diff-match-patch-rs = "0.4"
automerge = "0.5"
base64 = "0.22"
similar = "2.5"
ts-rs = "8"

[dev-dependencies]
# A4 sidecar_path / auto_merge round-trip tests serialise via serde_json.
serde_json = "1"
