[package]
name = "mdviewer-core"
version = "0.1.0"
edition = "2021"
description = "Shared MDViewer core: anchor + comments + sidecar + render."
license = "GPL-3.0-or-later"

[lib]
name = "mdviewer_core"
path = "src/lib.rs"

[dependencies]
# A6: render half of document.rs moved here. pulldown-cmark drives the
# GFM event walk; syntect powers the syntax-highlighting path. Both
# previously lived in src-tauri/Cargo.toml — we keep the same major
# versions so transitive crate-graph behaviour is unchanged.
pulldown-cmark = "0.11"
syntect = "5"
serde = { version = "1", features = ["derive"] }
# RenderOptions / RenderResult continue to cross the desktop's IPC
# boundary; the ts-rs derive must stay attached to the canonical
# definition rather than living on a desktop wrapper. Without it the
# generated TypeScript binding would silently drop these types.
ts-rs = "8"
