[package]
name = "mdviewer-core"
version = "0.1.0"
edition = "2021"
description = "Shared MDViewer core: anchor + comments + sidecar + render."
license = "GPL-3.0-or-later"

[lib]
name = "mdviewer_core"
path = "src/lib.rs"

# Host-side bindgen entry point. Compiled only with `--features uniffi`
# so desktop builds (which never enable that feature) don't pull in the
# bindgen / askama / weedle dependency tree. The Android `:core` Gradle
# module invokes this via `cargo run --bin uniffi-bindgen --features uniffi`
# to regenerate `dev.mdviewer.core` Kotlin bindings from the UDL.
[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen_main.rs"
required-features = ["uniffi"]

# Tiny stdout-printing render binary shared by Layer 2 (block-tree
# oracle, B3) and Layer 4 (v0.4.0 baseline audit, D1). Both consume
# View-mode HTML without spinning up Tauri. No feature flags — it links
# only against `pulldown-cmark` + `syntect`, which are unconditional deps.
[[bin]]
name = "render-cli"
path = "src/bin/render-cli.rs"

[features]
# Default empty: desktop builds (src-tauri) link mdviewer-core as a pure
# rlib with no UniFFI runtime. The Android shim crate (`mdviewer-jni`)
# turns this on via `features = ["uniffi"]` to pull `uniffi`'s scaffolding
# emit + the `uniffi_bindings` module that bodies the generated FFI.
default = []
uniffi = ["dep:uniffi"]

[dependencies]
# A3 + A4 + A6 deps merged.
# - Render half (A6): pulldown-cmark for the GFM event walk, syntect for
#   syntax highlighting. RenderOptions / RenderResult cross the desktop
#   IPC boundary, so ts-rs stays here too.
# - Anchor + comments graph (A3): diff-match-patch-rs (Bitap fuzzy match),
#   automerge (CRDT bridge), anyhow / thiserror (error context), base64,
#   similar — all previously in src-tauri/Cargo.toml.
# - AutoMergeMode + sidecar_filename (A4): serde-only — the wrapper
#   `AutoMergeModeTs` in src-tauri's settings.rs is what carries ts-rs
#   so the core enum stays platform-agnostic.
pulldown-cmark = "0.11"
syntect = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
diff-match-patch-rs = "0.4"
automerge = "0.5"
base64 = "0.22"
similar = "2.5"
ts-rs = "8"

# Optional: pulled in only when the `uniffi` feature is on. The runtime
# (procmacros + ffi support) is gated so desktop builds never see it.
# v1 surface is fully synchronous; no `tokio` feature.
# `cli` is required so `uniffi::uniffi_bindgen_main()` (used by the
# `uniffi-bindgen` host bin above) is available.
uniffi = { version = "0.28", optional = true, features = ["cli"] }

[build-dependencies]
# Same gate: scaffolding generation is only needed when the consuming
# crate (mdviewer-jni) compiles us with `--features uniffi`.
uniffi = { version = "0.28", features = ["build"], optional = true }

[dev-dependencies]
# A4 sidecar_path / auto_merge round-trip tests serialise via serde_json.
serde_json = "1"
